# NimdaGame

./: .env.example  .gitattributes  .gitignore  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: release-check.yml
bindings/godot_cpp/: CMakeLists.txt
core/: CMakeLists.txt
core/src/battle/: combat_simulation.cpp
data/raw/skills/: skill_slash.yaml
data/raw/units/: unit_knight.yaml  unit_slime.yaml
data/schemas/: plugin_manifest.schema.json  skill.schema.json  stage.schema.json  ui_component_catalog.schema.json  ui_style.schema.json  ui_style_bible.schema.json  ui_template.schema.json  unit.schema.json
docs/: architecture.md  data_schema.md  demo_plan.md  gameplay_modules.md  plugin_system.md  release_pipeline.md  repository_layout.md  ui_generation_pipeline.md
game/: project.godot
game/addons/core_bridge/: README.md  core_bridge.gdextension.example
game/app/scenes/: main.tscn
game/app/scripts/: main.gd
game/common/plugins/: plugin_registry.gd
game/plugins/: enabled_plugins.json
game/plugins/examples/: external_script_plugin.example.json  (+1 more)
game/ui_pipeline/: asset_slots.json  component_catalog.json
release/: checklist.md  release_notes_template.md  release_targets.json
scripts/: release.ps1  ui_generate.ps1
tools/: pyproject.toml
tools/ai_providers/: gemini_images.json  google_imagen_fast.json  openai_images.json
tools/mygame_tools/: __init__.py  balance_report.py  generate_godot_data.py  release_pipeline.py  simulate_battle.py  ui_ai_provider.py  ui_asset_importer.py  ui_pipeline.py  validate_config.py  validate_plugins.py
(+52 files in other folders)
