[project]
name = "nimdagame-tools"
version = "0.1.0"
description = "Development tools for NimdaGame data validation, generation, and simulation."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
