[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nimdagame-tools"
version = "0.1.0"
description = "Development tools for NimdaGame data validation, generation, and simulation."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.22",
    "pyyaml>=6.0",
]

[project.scripts]
nimdagame-release = "mygame_tools.release_pipeline:main"
nimdagame-validate-plugins = "mygame_tools.validate_plugins:main"
nimdagame-ui-pipeline = "mygame_tools.ui_pipeline:main"
nimdagame-ui-ai = "mygame_tools.ui_ai_provider:main"
nimdagame-ui-import = "mygame_tools.ui_asset_importer:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
